Version 1.0.5
Major Changes
- Added config to offset main house from the world's spawn. Can be useful for mod compatability
- Added config to turn off setting world spawn to the house 

Minor Changes
- More error handling improvements
- Fixed rare issue with basement lights not turning on
- Improved dirt generation around main house
- Fixed naming inconsistencies
- Changed description